--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       <div class="vcard-footer">
         <!-- Social Icons -->
         <div class="footer-social-icons">
-          <a href="http//instagram.com/wayan_rida"><i class="fa fa-instagram"></i></a>
-          <a href="http//instagram.com/wayan.stres"><i class="fa fa-facebook"></i></a>
+          <a href="http://instagram.com/wayan_rida"><i class="fa fa-instagram"></i></a>
+          <a href="http://instagram.com/wayan.stres"><i class="fa fa-facebook"></i></a>
           <a href="https://api.whatsapp.com/send?phone=6281273062253"><i class="fa fa-whatsapp"></i></a>
         </div>
         <!-- /Social Icons -->
