--- a/index.html
+++ b/index.html
@@ -73,17 +73,9 @@
     </div>
     <!-- /MAIN MENU -->
     
-    <style>
-      /* script menghilangkan Horizontal Scroll */
-      html, body {
-      max-width: 100%;
-      overflow-x: hidden;
-      }
-
-      .paragraph {
-      width: 150%;
-      }
-</style>
+    @media screen and (max-width:320px){ 
+html{ overflow-y: hidden; }
+}
     
     <!-- SECTION: vCard Body  --> 
     <div class="section-vcardbody section-home" id="section-home">
