--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ html{ overflow-x: hidden; }
         <!-- Description Text -->
         <hr class="hr1">
         <div class="vcard-profile-description-text">
-          <p>Seorang mahasiswa semester 7 Jurusan Teknik Informatika di Institut Informatika & Bisnis Darmajaya.</p>
+          <p>Seorang mahasiswa semester 7 Jurusan TI.</p>
         </div>  
         <!--/ Description Text -->  
         <!-- Description feature -->
