--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <!-- Description -->
       <div class="vcard-profile-description">
         <!-- Profile title -->
-        <h1 class="profile-title">Halo, Saya <span class="color1">Wayan Rida Arista!</span></h1>
+        <h1 class="profile-title">Halo, Saya <span class="color1">Wayan Rida!</span></h1>
         <h2 class="profile-subtitle">Desain Grafis & Multimedia</h2>
         <!-- /Profile Title -->
         <!-- Description Text -->
